[package]
name = "forkme"
version = "0.1.0"
authors = ["Ivan Velichko <iximiuz@gmail.com>"]
edition = "2018"

[dependencies]
libc = "0.2"
nix = "0.15.0"

[[bin]]
name = "wait_block"
path = "src/wait_block.rs"

[[bin]]
name = "wait_busy"
path = "src/wait_busy.rs"

[[bin]]
name = "wait_signal"
path = "src/wait_signal.rs"

[[bin]]
name = "subreaper"
path = "src/subreaper.rs"

[[bin]]
name = "combined"
path = "src/combined.rs"

[[bin]]
name = "sleepy"
path = "src/sleepy.rs"
